--- a/main.tex
+++ b/main.tex
@@ -252,13 +252,13 @@ This document contains the sketching of the loci using equations.
 Download all python codes from 
 %
 \begin{lstlisting}
-https://github.com/ashish-hk/Assignment2/blob/main/Assignment2.ipynb
+https://github.com/ashish-hk/Assignment_3/blob/main/Assignment3.ipynb
 \end{lstlisting}
 %
 Download latex-tikz codes from 
 %
 \begin{lstlisting}
-https://github.com/ashish-hk/Assignment2/blob/main/main.tex
+https://github.com/ashish-hk/Assignment_3/blob/main/main.tex
 \end{lstlisting}
 %
 \section{Problem}
@@ -270,7 +270,62 @@ Find the equation to the straight line cutting off intercepts 3 and 2 from the a
 
 \section{Solution}
 
-The line passes through the points (3,0) and (0,2)
+The line passes through the given points
+\begin{align*}
+\vec{x}_{1}=\myvec{3\\0} \text{ and } \vec{x}_{2}=\myvec{0\\2}
+\end{align*}
+
+We know that,
+\begin{align*}
+\vec{n}^{T}\vec{x}=1
+\end{align*}
+
+\begin{align}
+\vec{n}^{T}\myvec{3\\0}=1\\
+\vec{n}^{T}\myvec{0\\2}=1
+\end{align}
+
+
+
+
+
+
+resulting in the the matrix equation
+\begin{align}
+\myvec{3 & 0 \\ 0 & 2} \vec{n} = \myvec{1 \\ 1}
+\end{align}
+
+yielding the augmented matrix
+\begin{align}
+\myvec{3 &0 & 1\\0 & 2 & 1} 
+\end{align}
+
+
+Performing row reduction,
+\begin{align}
+\myvec{3 &0 & 1\\0 & 2 & 1} 
+\\
+\xleftrightarrow {R_1\leftarrow \frac{R_1}{3}}\myvec{1 &0 & \frac{1}{3}\\0 & 2 & 1}\\ 
+\xleftrightarrow {R_2\leftarrow \frac{R_2}{2}}\myvec{1 &0 & \frac{1}{3}\\0 & 1 & \frac{1}{2}}\\
+\label{eq:line_aug}
+\end{align}
+
+
+From \eqref{eq:line_aug},
+\begin{align}
+\vec{n} = \frac{1}{6}\myvec{2 \\3}
+\end{align}
+%
+Thus the equation of the desired line is 
+\begin{align}
+\frac{1}{6}\myvec{2 &3}\vec{x} &= 1
+\\
+\text{or, } \myvec{2 &3}\vec{x} &= 6
+\end{align}
+
+
+
+
 
 
 
